# unity-http-requests

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE.md  README.md  build-android.sh  build-docker.sh  build-ios.sh  build-win64.sh  docker-clean.sh  docker.sh  package.json
.github/workflows/: workflow.yml
Assets/Plugins/Editor/: UnityHttpRequests.h
CMake/: FindCURL.cmake  FindMBEDTLS.cmake  FindUTF8CPP.cmake  FindZLIB.cmake
CMake2/: FindCURL.cmake  FindZLIB.cmake
Native/include/: http_requests.h
Native/src/win64/: Makefile  http_context.cc  http_context.h  http_requests.cc
Runtime/: BodyData.cs  Constants.cs  Header.cs  HeadersData.cs  HttpContext.cs  Response.cs  StringRef.cs  UHRException.cs  UnityHttpRequests.Runtime.asmdef
Runtime/include/: http_requests.h
Runtime/src/win64/: http_context.cc  http_context.h  http_requests.cc
Src~/go/: build.sh  go.mod
Src~/go/cmd/unity_http_requests/: main.go
Src~/include/: unity_http_requests.h
Src~/src/win64/: Makefile  http_context.cc  http_context.h  unity_http_requests.cc
Tests/Runtime/: Tests.cs
cmake/: FindCURL.cmake  FindMBEDTLS.cmake  FindUTF8CPP.cmake
dockerfiles/: Dockerfile.android  Dockerfile.linux  Dockerfile.tests  Dockerfile.windows
examples/quick_start/: QuickStart.cs
examples/response_dispatcher/: ResponseDispatcher.cs
go~/: build-android.sh  build-win64.sh  build.sh  go.mod
go~/cmd/unity_http_requests/: main.go
go~/include/: UnityHttpRequests.h
objc~/: build-ios.sh
objc~/src/: Context.h  Context.m  HeaderStorage.h  HeaderStorage.m  Result.h  Result.m  ResultStorage.h  ResultStorage.m  UnityHttpRequests.h  UnityHttpRequests.m
scripts/: build-android.sh  build-ios.sh  build-linux64.sh  build-win64.sh  build.cmd  build.sh  build_android.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_windows.cmd  build_windows.ps1  build_windows.sh  clean.sh  fetch_deps.sh  test.sh
scripts/util/: download.sh  fetch_deps.sh  fetch_jom.sh  verify.sh
uhr/cpp/: CMakeLists.txt  meson.build
uhr/cpp/src/: CMakeLists.txt  ca_certs.cc  ca_certs.h  context.cc  context.h  init.cc  init.h  log_sink.cc  log_sink.h  logging.cc  logging.h  main.cc  request.cc  request.h  request_builder.cc  request_builder.h  session.cc  session.h  util.cc  util.h
uhr/cpp/subprojects/: curl.wrap  mbedtls.wrap
uhr/go/: build-android.sh  build-win64.sh  go.mod
uhr/go/cmd/uhr/: main.go  serialization.go
uhr/go_deprecated/cmd/uhr/: main.go
uhr/include/: UnityHttpRequests.h
uhr/objc/: build-ios.sh
uhr/objc/src/: Context.h  Context.m  HeaderStorage.m  Logging.h  Logging.m  Result.h  Result.m  ResultStorage.h  ResultStorage.m  Session.h  Session.m  UnityHttpRequests.h  UnityHttpRequests.m
uhr/rust/: Cargo.toml  build.rs  generate_binding.sh
uhr/rust/src/: bindings.rs  lib.rs
uhr/rust/src/uhr/: context.rs
uhr~/go/cmd/uhr/: main.go
uhr~/objc/src/: Context.m  HeaderStorage.h  HeaderStorage.m  ResultStorage.m  UnityHttpRequests.m
unity/: .npmignore  UnitTest1.cs  package.json  uhr_tests.csproj
unity/Runtime/: Constants.cs  Header.cs  HeadersData.cs  HttpContext.cs  HttpSession.cs  Response.cs  StringRef.cs  UHRException.cs  UnityHttpRequests.Runtime.asmdef
unity/Tests/Runtime/: Tests.cs  UnityHttpRequests.Tests.Runtime.asmdef
